--- a/tweets-cards/public/index.html
+++ b/tweets-cards/public/index.html
@@ -48,7 +48,7 @@
     <!-- End Single Page Apps for GitHub Pages -->
     
     </head>
-  <title>React App</title>
+  <title>Welcome to TweetStats</title>
 </head>
 
 <body>
